fix(controller-view/coupling): decouple views from model objects
Replace BugemonTeam with List<Bugemon> throughout the model and
controller layers. Introduce BugemonTeamDTO and BugemonDTO interfaces
so views only depend on DTOs. Move click-handler logic from view
lambdas into controller callbacks. Update all tests accordingly.

Co-authored-by: Philippe Brisbois <philippe.brisbois@ulb.be>